codex-rs/tui/src/agent_runtime/snapshots/codex_tui__agent_runtime__gallery_tests__agent_status_gallery_vt100_40.snap
---
source: tui/src/agent_runtime/gallery_tests.rs
expression: rendered
---
Agent gallery · compact · reported state
› root         working
  ├─ tui       finished
  ├─ review    failed · closed
  └─ orphan    status unavailable
  └─ nested    needs input
  ↑↓ select · Enter watch · Esc close
